--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -4,10 +4,22 @@
 
 {% block content %}
 <h1> My blog</h1>
+{% if tag %}
+<h2>Posts tagged "{{ tag.name }}"</h2>
+{% endif %}
 {% for post in posts %}
 <h2>
     <a href="{{ post.get_absolute_url }}">
         {{ post.title }}
+        <p class="tags">
+            Tags:
+            {% for tag in post.tags.all %}
+            <a href='{% url "blog:post_list_by_tag" tag.slug %}'>
+                {{ tag.name }}
+            </a>
+            {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
     </a>
 </h2>
 <p class="date">
@@ -15,5 +27,5 @@
 </p>
 {{ post.body|truncatewords:30|linebreaks }}
 {% endfor %}
-{% include "blog/pagination.html" with page=page_obj %}
+{% include "blog/pagination.html" with page=posts %}
 {% endblock %}
