--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -14,6 +14,7 @@
   <div id="sidebar">
     <h2>My blog</h2>
     <p>This is my blog. So far I've published {% total_posts %} posts.</p>
+      <p><a href='{% url "blog:post_feed" %}'>Subscribe to RSS channel</a></p>
     <h3>Latest posts</h3>
     {% show_latest_posts 3 %}
     <h3>Most commented posts</h3>
